<resources>
    <string name="app_name">SaysSimon</string>
    <string name="start_new_game">Start new game</string>
    <string name="easy">Easy</string>
    <string name="timer">Timer</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>

    <string name="score">Score : </string>
    <string name="start"> START !</string>
    <string name="round">Round : </string>
    <string name="life">Life : </string>
    <string name="level">Level : </string>
    <string name="color">Color :</string>
</resources>


